# Secure-Finance-LLM

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  NEW_FEATURES.md  README.md
backend/: .dockerignore  audit_logging.py  auth.py  clear_qdrant.py  guardrails.py  indexer_service.py  llm_client.py  main.py  prompts.py  pyproject.toml  requirements.txt  retriever.py
data/: README.md  acl_mapping.json
frontend/: .dockerignore  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AdminPanel.css  AdminPanel.jsx  FileUpload.css  FileUpload.jsx  Login.css  Login.jsx  QueryInput.css  QueryInput.jsx  ResponseDisplay.css  ResponseDisplay.jsx
indexer/: ingest_pdfs.py  stream_index.py  upsert_qdrant.py
infra/docker/: Dockerfile.frontend  docker-compose.yml
infra/k8s/: backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml  qdrant-deployment.yaml
vector_db/: docker-compose.yml
