[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.123.0",
    "jwt>=1.4.0",
    "pyjwt>=2.10.1",
    "pypdf2>=3.0.1",
    "python-jose>=3.5.0",
    "qdrant-client>=1.16.1",
    "uvicorn>=0.38.0",
]
